# localref

./: .gitignore  Agents.md  Cargo.toml  PLAN.md  Readme.md  build.py  clippy.toml  package-lock.json  package.json  rustfmt.toml
assets/: localref-ui-bindgen.d.ts  localref-ui-bindgen.js  localref-ui-bindgen_bg.wasm  localref-ui-bindgen_bg.wasm.d.ts  localref-ui.css  localref-ui.d.ts  localref-ui.js  localref-ui.tailwind.css  localref-ui_bg.wasm  localref-ui_bg.wasm.d.ts
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/bib/: Cargo.toml  readme.md
crates/config/: Cargo.toml
crates/core/: Cargo.toml  readme.md
crates/core/src/: event_log.rs  lib.rs  lock.rs  pending.rs  rest.rs  rest_files.rs
crates/core/src/config/: mod.rs
crates/core/src/error/: mod.rs
crates/core/src/model/: mod.rs
crates/core/src/platformfs/: mod.rs
crates/core/src/rules/: mod.rs
crates/core/src/scan/: mod.rs
crates/core/src/storage/: mod.rs
crates/core/src/types/: mod.rs
crates/csc/: Cargo.toml
crates/csc/src/: lib.rs  rest.rs
crates/error/: Cargo.toml
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/native-win32/: Cargo.toml  build.rs
crates/native-win32/src/: lib.rs  win32_native.cpp
crates/platformfs/: Cargo.toml
crates/platformfs/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin-sdk/: Cargo.toml
crates/plugin-sdk/src/: lib.rs  plugin.rs  runtime.rs  state.rs
crates/plugin/src/: discovery.rs  error.rs  invoke.rs  lib.rs  manifest.rs  state.rs
crates/rest/: Cargo.toml
crates/rest/src/: lib.rs
crates/rules/: Cargo.toml
crates/rules/src/: lib.rs
crates/scan/: Cargo.toml
crates/scan/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/tray/: Cargo.toml
crates/tray/src/: lib.rs  native.rs
crates/types/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui-app/: Cargo.toml
crates/ui-app/src/: app.rs  assets.rs  client.rs  dto.rs  lib.rs  model.rs  route.rs  server.rs  state.rs
crates/ui-wasm/: Cargo.toml
crates/ui-wasm/src/: api.rs  controller.rs  lib.rs  query.rs  render.rs
crates/ui-web/: Cargo.toml
crates/ui-web/src/: actions.rs  assets.rs  dto.rs  lib.rs  state.rs
crates/ui-web/src/components/: category.rs  detail.rs  events.rs  files.rs  mod.rs  script.rs  sidebar.rs
crates/ui/src/: client.rs  desktop_app.rs  lib.rs  view_model.rs
crates/ui/src/desktop_app/: desktop_state.rs
crates/ui/tests/: rest_client.rs
docs/: plugin-cli.md
docs/superpowers/plans/: 2026-05-29-ssr-wasm-json-plan.md
docs/superpowers/specs/: 2026-05-29-ssr-wasm-json-design.md
examples/plugins/bibtexer/: Cargo.toml  plugin.toml
examples/plugins/bibtexer/src/: main.rs
src/: main.rs  rest_client.rs  runtime_log.rs
src/tray/: mod.rs  native_tray.rs  tray.rs
src/ui/: client.rs  desktop_app.rs  mod.rs  view_model.rs
tests/: test_build.py
