[package]
name = "localref"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["desktop", "native-tray"]
desktop = ["csc/desktop", "dep:iced"]
native-tray = ["desktop", "csc/native-tray", "dep:tray-icon"]

[dependencies]
clap = { workspace = true }
csc = { path = "crates/csc" }
iced = { workspace = true, optional = true }
localref_core = { package = "localref-core", path = "crates/core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tray-icon = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[workspace]
resolver = "3"
members = [
	"crates/core",
	"crates/csc",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive"] }
http = "1"
redb = "3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "0.9"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
iced = { version = "0.13", features = ["tokio"] }
tao = "0.30"
tray-icon = "0.21"
windows-sys = { version = "0.61", features = [
	"Win32_UI_Shell",
	"Win32_UI_WindowsAndMessaging",
] }

[workspace.lints.clippy]
correctness = "deny"
single_call_fn = "deny"
complexity = "deny"
pedantic = { level = "warn", priority = -1 }
