[package]
name = "localref"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = ["desktop", "native-tray"]
desktop = ["dep:ui-web"]
native-tray = ["desktop", "dep:tao", "dep:tray-icon"]

[dependencies]
axum = { workspace = true }
clap = { workspace = true }
csc = { path = "crates/csc" }
localref_core = { package = "localref-core", path = "crates/core" }
native-win32 = { path = "crates/native-win32" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tao = { workspace = true, optional = true }
tray-icon = { workspace = true, optional = true }
ui-web = { path = "crates/ui-web", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[workspace]
resolver = "3"
members = [
	"crates/core",
	"crates/csc",
	"crates/native-win32",
	"crates/ui-app",
	"crates/ui-web",
	"crates/ui-wasm",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
axum = { version = "0.8", features = ["multipart"] }
clap = { version = "4", features = ["derive"] }
http = "1"
leptos = { version = "0.8", default-features = false }
redb = "3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
toml = "0.9"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tao = "0.30"
tray-icon = "0.21"

[workspace.lints.clippy]
correctness = "deny"
single_call_fn = "deny"
complexity = "deny"
pedantic = { level = "warn", priority = -1 }
