[package]
name = "localref"
version = "0.1.0"
edition = "2024"

[features]
default = ["desktop", "native-tray"]
desktop = ["ui/desktop"]
native-tray = ["tray/native"]

[dependencies]
clap = { workspace = true }
csc = { path = "../csc" }
localref-config = { path = "../config" }
localref_core = { package = "core", path = "../core" }
rest = { path = "../rest" }
serde = { workspace = true }
serde_json = { workspace = true }
storage = { path = "../storage" }
tokio = { workspace = true }
tray = { path = "../tray" }
types = { path = "../types" }
ui = { path = "../ui" }

[dev-dependencies]
tempfile = { workspace = true }
