[package]
name = "localref-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
http = { workspace = true }
redb = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
native-win32 = { path = "../native-win32" }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
