[package]
name = "csc"
version = "0.1.0"
edition = "2024"
autobins = false

[dependencies]
axum = { workspace = true }
http = { workspace = true }
localref-config = { path = "../config" }
localref_core = { package = "core", path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
types = { path = "../types" }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }

[[bin]]
name = "localref-csc-dev"
path = "src/bin/localref-csc-dev.rs"
