[package]
name = "csc"
version = "0.1.0"
edition = "2024"
autobins = false

[features]
default = []
desktop = ["dep:iced"]
native-tray = ["desktop", "dep:tray-icon"]

[dependencies]
axum = { workspace = true }
http = { workspace = true }
iced = { workspace = true, optional = true }
localref_core = { package = "localref-core", path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tray-icon = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
