[package]
name = "localref-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "time"] }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
