[package]
name = "rest"
version = "0.1.0"
edition = "2024"
autobins = false

[dependencies]
axum = { workspace = true }
error = { path = "../error" }
http = { workspace = true }
localref-config = { path = "../config" }
localref_core = { package = "core", path = "../core" }
model = { path = "../model" }
serde = { workspace = true }
serde_json = { workspace = true }
storage = { path = "../storage" }
tokio = { workspace = true }
types = { path = "../types" }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }

[[bin]]
name = "localref-rest-dev"
path = "src/bin/localref-rest-dev.rs"
