[package]
name = "rules"
version = "0.1.0"
edition = "2024"

[dependencies]
error = { path = "../error" }
model = { path = "../model" }
regex = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
types = { path = "../types" }

[dev-dependencies]
tempfile = { workspace = true }
