[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
error = { path = "../error" }
model = { path = "../model" }
redb = { workspace = true }
scan = { path = "../scan" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
types = { path = "../types" }

[dev-dependencies]
platformfs = { path = "../platformfs" }
tempfile = { workspace = true }
