[package]
name = "ui-app"
version = "0.1.0"
edition = "2024"

[features]
default = ["ssr"]
ssr = ["leptos/ssr"]
hydrate = [
    "leptos/hydrate",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]

[dependencies]
leptos = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Blob", "console", "DataTransfer", "Document", "DomParser", "DomTokenList", "DragEvent", "Element", "Event", "EventTarget", "File", "FileList", "FormData", "Headers", "History", "HtmlElement", "HtmlFormElement", "HtmlInputElement", "HtmlSelectElement", "Location", "MouseEvent", "Request", "RequestInit", "RequestMode", "Response", "SubmitEvent", "SupportedType", "Url", "UrlSearchParams", "Window"] }
