[package]
name = "ui-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["ssr"]
ssr = ["leptos/ssr", "dep:axum", "dep:localref_core", "dep:localref_plugin", "dep:native-win32", "dep:tokio", "dep:mime_guess"]
hydrate = [
    "leptos/hydrate",
    "dep:serde-wasm-bindgen",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
]

[dependencies]
axum = { workspace = true, optional = true }
leptos = { workspace = true }
mime_guess = { version = "2", optional = true }
localref_core = { package = "localref-core", path = "../core", optional = true }
localref_plugin = { package = "localref-plugin", path = "../plugin", optional = true }
native-win32 = { path = "../native-win32", optional = true }
tokio = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Blob", "console", "DataTransfer", "Document", "DomParser", "DomTokenList", "DragEvent", "Element", "Event", "EventTarget", "File", "FileList", "FormData", "Headers", "History", "HtmlElement", "HtmlFormElement", "HtmlInputElement", "HtmlSelectElement", "Location", "MouseEvent", "Request", "RequestInit", "RequestMode", "Response", "SubmitEvent", "SupportedType", "Url", "UrlSearchParams", "Window"] }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
