[package]
name = "ui-web"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
leptos = { workspace = true }
localref_core = { package = "localref-core", path = "../core" }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
