[package]
name = "ui"
version = "0.1.0"
edition = "2024"
autobins = false

[features]
default = []
desktop = ["dep:iced"]

[dependencies]
iced = { workspace = true, optional = true }
localref-config = { path = "../config" }
model = { path = "../model" }
serde = { workspace = true }
serde_json = { workspace = true }
